# FFF

./: README.md
backend/: .env  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 2024_03_26_2059-1dfd106bf122_message.py  2024_05_27_2107-61773033b84b_add_user_model.py
backend/backend/: dependencies.py  filters.py  main.py
backend/backend/authentication/api/: models.py  user.py  user_router.py
backend/backend/authentication/orm/: models.py  repository.py
backend/backend/authentication/services/: models.py  sec.py  user.py
backend/backend/orm/: base.py  base_repo.py  models.py
backend/backend/redis/: storage.py  utils.py
backend/backend/settings/: database.py  sec.py
backend/database/: base_repo.py  exceptions.py
backend/utils/: utils.py
mobile/: README.md  firebase.json  pubspec.yaml
mobile/android/: build.gradle
mobile/lib/: AnalyticsScreen.dart  EnterEmailCodeScreen.dart  LastTransactionScreen.dart  LoginScreen.dart  MainScreen.dart  OpeningScreen.dart  Pages.dart  PasswordRecoveryScreen.dart  PlaningScreen.dart  ProfileScreen.dart  RegistrarionScreen.dart  UpdateIsDoneScreen.dart  UpdatePasswordScreen.dart  firebase_options.dart  main.dart
mobile/linux/: CMakeLists.txt  my_application.cc
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
Сопроводительное письмо/: Сопроводительное письмо.docx
ТЗ/: Техническое задание (2).docx  Техническое задание (3).docx  Техническое задание.docx
(+21 files in other folders)
